# heart-diseas-prediction

./: .gitignore  README.md  app.py  pyproject.toml
models/: heart_disease_rf.pkl
notebooks/: 01-random_forest.ipynb
src/heart_disease/: __init__.py  predict.py  preprocessing.py  train.py  utils.py
