[project]
name = "heart-disease-prediction"
version = "0.1.0"
description = "Heart disease prediction using Random Forest classifier"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "joblib>=1.5.3",
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.1",
    "notebook>=7.6.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.59.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
